# neural-network-tabular

./: README.md  config.yml  config_feed_forward.yml  config_transformer.yml  gitignore  pyproject.toml
neural_network/: README.md  feature_engineering.py  main.py  utils.py
neural_network/dataset/: torch_dataset.py
neural_network/metrics/: reconstruction.py  spearman_metric.py
neural_network/models/: feed_forward_model.py  model.py  transformer_model.py
neural_network/trainers/: trainer.py  trainer_cnn_autoencoder.py  trainer_neural_network.py
