[tool.poetry]
name = "neural_network"
version = "0.1.1"
description = "neural network model for adialab market competition"
authors = [
    "Thomas Uriot"
    # Add your name here
]
readme = "README.md"
packages = [
    { include = "neural_network"},
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
torch = "^2.0.0"
torchvision = "^0.15.1"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

